# brickfoundry_v0

./: .gitignore  Cargo.toml  Dioxus.toml  flake.nix
assets/: main.css
src/: main.rs  pages.rs
src/components/: lego_render.rs  mod.rs
src/pages/: about.rs  home.rs  page_not_found.rs  projects.rs
src/server/: ldraw.rs  mod.rs
